--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
-  "name": "website-to-compute",
-  "version": "0.0.1",
+  "name": "nodejs",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "node server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.20.4",
+    "express": "^4.18.3",
+    "fs": "^0.0.1-security",
+    "handlebars": "^4.7.8",
+    "node-fetch": "^3.3.2",
+    "@google/generative-ai": "^1.3.0"
   },
   "devDependencies": {
-    "vite": "^6.2.2"
+    "@types/node": "^22.13.11"
   }
 }
